--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ enableRobotsTXT = true
 
 [params]
   favicon = ""
-  description = "The last theme you'll ever need. Maybe."
+  description = "Artiste du dimanche cherchant à désencombrer un peu ses murs."
   facebook = ""
   twitter = ""
   instagram = ""
@@ -25,5 +25,6 @@ enableRobotsTXT = true
   github = ""
   linkedin = ""
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class = "bg-black"
+  background_color_class = "bg-navy"
   featured_image = "/img/header.jpg"
+  read_more_copy = "Voir tableau"
