logo et mise en page

--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ enableRobotsTXT = true
 
 [params]
   favicon = ""
-  description = "Artiste du dimanche cherchant à désencombrer un peu ses murs."
+  description = "Bienvenue dans la grotte de l'ours peintre"
   facebook = ""
   twitter = ""
   instagram = ""
